# ohmimetro

./: CMakeLists.txt  README.md  ohmimetro.c
